2021/in-work/voting-app-kubernetes/ingress-ru.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: voteru
  namespace: default
spec:
  tls:
  - hosts:
    - "vote.c01.ht2021.ru"
    - "result.c01.ht2021.ru"
    secretName: c01-tls
  rules:
    - host: "vote.c01.ht2021.ru"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
    - host: "result.c01.ht2021.ru"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: result
              port:
                number: 80
